<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="godot_game_activity_name">Godot Play window</string>
	<string name="denied_storage_permission_error_msg">Missing storage access permission!</string>
	<string name="denied_install_packages_permission_error_msg">Missing install packages permission!</string>
	<string name="game_menu_input_event_joypad_motion_label">Input</string>
	<string name="game_menu_nodes_2d_button_label">2D</string>
	<string name="game_menu_node_3d_button_label">3D</string>
	<string name="menu_reset_2d_camera_label">Reset 2D Camera</string>
	<string name="menu_reset_3d_camera_label">Reset 3D Camera</string>
	<string name="menu_manipulate_in_game_label">Manipulate In-Game</string>
	<string name="menu_manipulate_from_editors_label">Manipulate From Editors</string>
    <string name="menu_embed_game_on_play_label">Embed Game On Play</string>
	<string name="menu_camera_label">Camera Options</string>
	<string name="menu_camera_override_label">Override Camera</string>
	<string name="embedded_game_not_running_message">Press play to start the game.</string>
	<string name="running_game_not_embedded_message">Game running not embedded.</string>
	<string name="menu_keep_embed_game_on_top_label">Keep on Top using PiP</string>
	<string name="dont_show_again_message">Don\'t show again</string>
	<string name="show_game_resume_hint">Tap on \'Game\' to resume</string>
	<string name="restart_embed_game_hint">Restart game to embed</string>
	<string name="restart_non_embedded_game_hint">Restart Game to disable embedding</string>
	<string name="lock_aspect_ratio_btn_text">Lock Aspect ratio (%1$d x %2$d)</string>
	<string name="don_t_select_locked_nodes">Don\'t Select Locked Nodes</string>
	<string name="select_group_over_children">Select Group Over Children</string>
	<string name="show_selection_visibility">Show Selection Visibility</string>
</resources>
